# BazelApplePlatteformsTemplateProject

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: tests.yml
apple/: BUILD.bazel
apple/Cat/: BUILD.bazel  Info.plist  README.md
apple/Cat/Sources/: CatApp.swift  CatView.swift
apple/Coffee/: Build.bazel  README.md
apple/Coffee/source/: CoffeeApp.swift  CoffeeView.swift
apple/Common/: README.md
apple/Modules/: BUILD.bazel
apple/Modules/API/: BUILD.bazel
apple/Modules/Models/: BUILD.bazel
apple/Resources/: BUILD.bazel  Main.AppKit.storyboard
apple/Tests/: README.md
apple/Train/: BUILD.bazel  README.md
apple/Train/Sources/: TrainAppDelegate.swift
apple/Train/Tests/: UITests.swift
apple/Yipman/: AppDelegate.swift  BUILD.bazel  Info.plist  README.md  YipmanAppDelegate.swift
apple/bazel_tools/: README.md
common/bazel_tools/: README.md  extensions.bzl  shared.bzl
