# Xcode
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)
# Todo: Version not worked.
xcodeproj(
    name = "xcode",
    project_name = "TemplateApps",
    top_level_targets = [
        top_level_target(
            "//apple/Train:Train",
            target_environments = ["simulator"],
        ),
        top_level_target(
            "//apple/Yipman:Yipman",
            target_environments = ["simulator"],
        ),
        top_level_target(
            "//apple/Cat:Cat",
            target_environments = ["simulator"],
        ),
        top_level_target(
            "//apple/Coffee:Coffee",
            target_environments = ["simulator"],
        ),
        # top_level_target(
        #     "//apple:appkit",
        #     target_environments = ["simulator"],
        # ),
        # top_level_target(
        #     "//apple/Hello:Swift",
        #     target_environments = ["simulator"],
        # ),
        # top_level_target(
        #     "//apple/Modules/API:APITests",
        #     target_environments = ["simulator"],
        # ),
        # top_level_target(
        #     "//apple/Modules/Models:ModelsTests",
        #     target_environments = ["simulator"],
        # ),
    ],
)

# tools

genrule(
    name = "lint",
    srcs = [],
    outs = ["lint.sh"],
    cmd = """
echo "set -e" > "$@"
echo "./$(location @buildifier_prebuilt//:buildifier) -lint fix -mode fix -r \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
echo "./$(location @SwiftLint//:swiftlint) --fix \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
""",
    executable = True,
    tools = [
        "@SwiftLint//:swiftlint",
        "@buildifier_prebuilt//:buildifier",
    ],
)
